# CMakeList.txt: Projekt CMake pro FunShield, sem přidejte logiku zdrojového
# kódu a definic specifickou pro projekt.
#
cmake_minimum_required (VERSION 3.8)

# Přidejte zdrojový kód ke spustitelnému souboru tohoto projektu.
add_executable (FunShield "FunShield.cpp" "FunShield.h")

# TODO: V případě potřeby přidejte testy a cíle instalace.
